@@ -3,6 +3,8 @@
 
 * Added a registry that provides more strict ordering based on the invocation index.
   See `responses.registries.OrderedRegistry`.
+* Prevent `responses.activate` decorator to leak, if wrapped function called from within another
+  wrapped function. Also, allow calling of above mentioned chain. See #481 for more details.
 * Expose `get_registry()` method of `RequestsMock` object. Replaces internal `_get_registry()`.
 * `query_param_matcher` can now accept dictionaries with `int` and `float` values.
 * Add support for the `loose` version of `query_param_matcher` via named argument `strict_match`.
